# marketing-posts

marketing_strategy/: appstango.com_final_output.txt  mydailydefense.com_final_output.txt  pyproject.toml
marketing_strategy/src/marketing_posts/: crew.py  main.py
marketing_strategy/src/marketing_posts/config/: agents.yaml  tasks.yaml
