[project]
name = "marketing_posts"
version = "0.1.0"
description = "marketing-posts using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.35.8",
    "crewai-tools>=0.4.6",
]

[project.scripts]
marketing_posts = "marketing_posts.main:run"
train = "marketing_posts.main:train"
run_crew = "marketing_posts.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.poetry]
name = "marketing_posts"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = ">=0.35.8"}
crewai-tools = ">=0.4.6"
# Add your other dependencies here
requests = "^2.32.3"

[tool.poetry.scripts]
marketing_posts = "src.marketing_posts.main:main_function"
train = "marketing_posts.main:train"
run_crew = "marketing_posts.main:run"
